[package]
name = "bevy_mod_chroma"
version = "0.4.0"
edition = "2021"
categories = [ "games", "api-bindings" ]
description = "A plugin for the Bevy game engine to allow control of Razer Chroma devices"
keywords = [ "game", "gamedev", "bevy", "razer", "chroma" ]
repository = "https://github.com/datael/bevy_mod_chroma"
rust-version = "1.69.0"
readme = "README.md"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]
resolver = "2"
members = [
    "crates/*",
]

[dependencies]
bevy_mod_chroma_api.workspace = true
bevy_mod_chroma_request_lib.workspace = true

[dev-dependencies]
bevy.workspace = true

[workspace.dependencies]
bevy_mod_chroma_api = { path = "crates/bevy_mod_chroma_api", version = "0.4.0" }
bevy_mod_chroma_request_lib = { path = "crates/bevy_mod_chroma_request_lib", version = "0.4.0" }

bevy = { version = "^0.10", default-features = false, features = [ "bevy_render" ] }
bytes = "^1.4"
serde_json = "^1"
serde = { version = "^1", features = [ "derive" ] }
reqwest = { version = "^0.11", features = [ "json" ] }
crossbeam-channel = "^0.5"
url = "^2.3"
async-compat = "^0.2"

[target.'cfg(not(target_family = "wasm"))'.dev-dependencies.bevy]
version = "^0.10"
default-features = false
features = [ "dynamic_linking" ]

[target.'cfg(target_family = "wasm")'.dev-dependencies.bevy]
version = "^0.10"
default-features = false

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3
