[package]
name = "bevy_mod_chroma_api"
version = "0.2.1"
edition = "2021"
description = "Chroma API lib for bevy_mod_chroma"
keywords = [ "game", "gamedev", "bevy", "razer", "chroma" ]
repository = "https://github.com/datael/bevy_mod_chroma"
rust-version = "1.69.0"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy_mod_chroma_request_lib.workspace = true

bevy.workspace = true
serde_json.workspace = true
serde.workspace = true
reqwest.workspace = true
url.workspace = true

[dev-dependencies]
bevy.workspace = true
