[package]
name = "bevy_mod_chroma_request_lib"
version = "0.2.0"
edition = "2021"
description = "Request lib for bevy_mod_chroma"
keywords = [ "game", "gamedev", "bevy", "razer", "chroma" ]
repository = "https://github.com/datael/bevy_mod_chroma"
rust-version = "1.69.0"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy.workspace = true
bytes.workspace = true
serde_json.workspace = true
serde.workspace = true
reqwest.workspace = true
crossbeam-channel.workspace = true
async-compat.workspace = true

[dev-dependencies]
bevy.workspace = true
